[project]
name = "rectified-flow-pytorch"
version = "0.3.14"
description = "Rectified Flow in Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'rectified flow'
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
  ]

dependencies = [
    'accelerate',
    'einx>=0.3.0',
    'einops>=0.8.0',
    'ema-pytorch>=0.5.2',
    'hyper-connections>=0.1.8',
    'pillow>=9.4.0',
    'scipy',
    'torch>=2.0',
    'torchvision',
    'torchdiffeq',
]

[project.urls]
Homepage = "https://pypi.org/project/rectified-flow-pytorch/"
Repository = "https://github.com/lucidrains/rectified-flow-pytorch"

[project.optional-dependencies]
examples = [
    "datasets",
]

examples_ql = [
    "assoc-scan",
    "box2d-py",
    "fire",
    "gymnasium[box2d]>=1.0.0",
    "moviepy>=1.0.3",
    "numpy>=2.2.5",
    "tqdm",
    "x-mlps-pytorch>=0.0.20",
]

test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rectified_flow_pytorch"]
